style: anchor sticky footer and implement legal navigation menu
- Finalize sticky footer logic using flexbox on body and margin-top: auto
- Register and integrate 'footer-menu' for Impressum and Datenschutz
- Center footer content including copyright and navigation links
- Remove decorative border from footer for a cleaner transition
- Clean up index.php and footer.php template structure
- Add CSS masks to sidebar decoration to prevent hard cuts at footer

--- a/css/layout-base.css
+++ b/css/layout-base.css
@@ -1,50 +1,67 @@
+html {
+  height: 100%;
+}
+
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Georgia', serif;
-    background-color: #ffffff;
-    
-    background-image: url('../img/wappen_30.png');
-    background-position: center 200px;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+  height: 100%; 
+  margin: 0;
+  padding: 0;
+  font-family: 'Georgia', serif;
+  background-color: #ffffff;
+  
+  background-image: url('../img/wappen_30.png');
+  background-position: center 200px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;    
 }
 
 .main-container {
-    width: 90%;
-    max-width: 1100px;
-    margin: 0 auto;
-    position: relative;
+  width: 90%;
+  max-width: 1100px;
+  margin: 0 auto;
+  position: relative;
+
+  flex: 1;             
+  display: flex;        
+  flex-direction: column;  
 }
 
 .content-wrapper {
-    margin-top: 100px;
-    padding-left: 80px;
+  margin-top: 100px;
+  padding-left: 80px;
+  flex: 1;              
+  display: flex;
+  flex-direction: column;  
 }
 
 .fixed-sidebar-decoration {
-    position: fixed;
-    top: 100px; 
-    left: calc(50% - 550px);
-    width: 160px;
-    height: calc(100vh - 100px);
-    background-image: url('../img/ranke.png');
-    background-repeat: repeat-y;
-    z-index: 900;
+  position: fixed;
+  top: 100px; 
+  left: calc(50% - 550px);
+  width: 160px;
+  height: calc(100vh - 100px);
+  background-image: url('../img/ranke.png');
+  background-repeat: repeat-y;
+  z-index: 900;
 }
 
 .site-content {
-    flex-grow: 1;
-    padding: 20px 40px 40px 80px;
-    max-width: 800px;
+  flex-grow: 1;
+  padding: 20px 40px 40px 80px;
+  max-width: 800px;
 }
 
 .page-layout {
-    display: flex;
-    align-items: flex-start;
-    padding-top: 40px;
-    background-image: url('../img/wappen-bg.png');
-    background-position: center 100px;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
+  display: flex;
+  align-items: flex-start;
+  padding-top: 40px;
+  background-image: url('../img/wappen-bg.png');
+  background-position: center 100px;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
 }
