--- a/style.css
+++ b/style.css
@@ -11,183 +11,4 @@ Version: 1.1
 @import url('css/header/navigation.css');
 @import url('css/header/branding.css');
 
-/* body { */
-/*     margin: 0; */
-/*     padding: 0; */
-/*     font-family: 'Georgia', serif; */
-/*     background-color: #ffffff; */
-
-/*     background-image:  */
-/*         url('img/wappen_30.png'); */
-    
-/*     background-position: */
-/*         center 200px; */
-    
-/*     background-repeat:  */
-/*         no-repeat; */
-    
-/*     background-attachment: fixed; */
-    
-/* } */
-
-/* .site-header { */
-/*     position: fixed; */
-/*     top: 0; */
-/*     left: 0; */
-/*     width: 100%; */
-/*     z-index: 1000; */
-/*     padding-top: 40px;  */
-/*     background-color: #ffffff;  */
-/*     box-shadow: 0 2px 10px rgba(0,0,0,0.1); */
-/*     pointer-events: none; */
-/* } */
-
-/* .red-stripe { */
-/*     background-color: #b00000; */
-/*     height: 80px; */
-/*     width: 100%; */
-/*     display: flex; */
-/*     align-items: center; */
-/*     margin-top: 20px; */
-/* } */
-
-/* .header-container { */
-/*     width: 90%; */
-/*     max-width: 1200px; */
-/*     margin: 0 auto; */
-/*     display: flex; */
-/*     justify-content: space-between; */
-/*     align-items: center; */
-/*     position: relative; */
-/* } */
-
-/* .branding { */
-/*     display: flex; */
-/*     flex-direction: column; */
-/* } */
-
-/* .title { */
-/*     font-size: 28px; */
-/*     font-weight: bold; */
-/*     letter-spacing: 2px; */
-/* } */
-
-/* .tagline { */
-/*     font-size: 14px; */
-/*     font-style: italic; */
-/* } */
-
-/* .logo-area { */
-/*     position: relative; */
-/*     width: 150px; */
-/*     height: 80px; */
-/* } */
-
-/* .logo-area img { */
-/*     position: absolute; */
-/*     top: -20px;   */
-/*     right: 0; */
-/*     height: 140px; */
-/*     width: auto; */
-/*     filter: drop-shadow(0 4px 10px rgba(0,0,0,0.4)); */
-/*     z-index: 100; */
-/* } */
-
-/* .site-content { */
-/*     padding: 100px 50px 50px; */
-/*     max-width: 800px; */
-/* } */
-
-/* .main-container { */
-/*     width: 90%; */
-/*     max-width: 1100px; */
-/*     margin: 0 auto; */
-/*     position: relative; */
-/* } */
-
-/* .header-flex { */
-/*     display: flex; */
-/*     justify-content: space-between; */
-/*     align-items: center; */
-/* } */
-
-/* .page-layout { */
-/*     display: flex; */
-/*     align-items: flex-start; */
-/*     padding-top: 40px; */
-/* } */
-
-/* .sidebar-decoration { */
-/*     width: 60px; */
-/*     flex-shrink: 0; */
-/* } */
-
-/* .sidebar-decoration img { */
-/*     width: 100%; */
-/*     height: auto; */
-/* } */
-
-/* .content-wrapper { */
-/*     margin-top: 100px; */
-/*     padding-left: 80px; */
-/* } */
-
-/* .fixed-sidebar-decoration { */
-/*     position: fixed; */
-/*     top: 100px;  */
-/*     left: calc(50% - 550px);  */
-/*     width: 160px; */
-/*     height: calc(100vh - 100px); */
-/*     background-image: url('img/ranke.png'); */
-/*     background-repeat: repeat-y; */
-/*     z-index: 900; */
-/* } */
-
-/* .site-content { */
-/*     flex-grow: 1; */
-/*     padding: 20px 40px 40px 80px; */
-/* } */
-
-/* .page-layout { */
-/*     background-image: url('img/wappen-bg.png'); */
-/*     background-position: center 100px; */
-/*     background-repeat: no-repeat; */
-/*     background-attachment: scroll; */
-/* } */
-
-/* /\* Styling für das Hauptmenü *\/ */
-/* .main-navigation { */
-/*     margin-left: 20px; */
-/*     flex-grow: 1; /\* Damit es den Platz zwischen Branding und Logo nutzt *\/ */
-/* } */
-
-/* .nav-list { */
-/*     display: flex; */
-/*     list-style: none; */
-/*     margin: 0; */
-/*     padding: 0; */
-/*     gap: 15px; /\* Abstand zwischen den Buttons *\/ */
-/*     pointer-events: auto; /\* WICHTIG: Damit die Links trotz des Header-Paddings klickbar sind *\/ */
-/* } */
-
-/* .nav-list li a { */
-/*     background-color: #7a7a7a; /\* Das Grau deiner Buttons *\/ */
-/*     color: #ffffff; */
-/*     padding: 8px 15px; */
-/*     border-radius: 6px; */
-/*     text-decoration: none; */
-/*     font-family: sans-serif; */
-/*     font-size: 14px; */
-/*     transition: background-color 0.3s ease; */
-/*     display: inline-block; */
-/* } */
-
-/* .nav-list li a:hover { */
-/*     background-color: #5a5a5a; /\* Etwas dunkler beim Drüberfahren *\/ */
-/* } */
-
-/* /\* Aktive Seite markieren *\/ */
-/* .nav-list li.current-menu-item a { */
-/*     background-color: #333333; */
-/*     font-weight: bold; */
-/* } */
+@import url('css/footer.css');
