--- a/style.css
+++ b/style.css
@@ -15,3 +15,5 @@ Version: 1.1
 
 @import url('css/pages/tafelrunde.css');
 @import url('css/pages/kontakt.css');
+@import url('css/pages/news.css');
+@import url('css/pages/galerie.css');
