--- a/style.css
+++ b/style.css
@@ -17,3 +17,4 @@ Version: 1.1
 @import url('css/pages/kontakt.css');
 @import url('css/pages/news.css');
 @import url('css/pages/galerie.css');
+@import url('css/pages/partner.css');
