--- a/css/header/header-main.css
+++ b/css/header/header-main.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     z-index: 1000;
-    padding-top: 40px;
+    padding-top: 20px;
     background-color: #ffffff; 
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     pointer-events: none;
@@ -19,12 +19,23 @@
     margin-top: 20px;
 }
 
+.branding, .header-actions, .logo-area {
+    flex: 0 0 auto;
+}
+.branding {
+  flex: 0 0 250px;
+}
+
+.logo-area {
+    flex: 0 0 150px;
+}
+
 .header-container {
     width: 95%;
-    max-width: 1200px;
+    max-width: 1300px; 
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     position: relative;
     pointer-events: auto;
