--- a/css/header/navigation.css
+++ b/css/header/navigation.css
@@ -1,23 +1,39 @@
 .main-navigation {
-  flex-grow: 1;
+  /*flex-grow: 1;*/
   display: flex !important;
   justify-content: center;
-  margin: 0 40px;
+  margin: 0 20px;
+  
 }
 
 .nav-list {
   display: flex !important;
-  flex-direction: row !important;
+  /* flex-direction: row !important; */
+  flex-wrap: wrap !important;
+  justify-content: flex-start;
   list-style: none;
   margin: 0;
   padding: 0;
-  gap: 12px;
+  gap: 12px 12px;
+  max-width: 1500px;
 }
 
+/* .nav-list li { */
+/*   display: inline-block; */
+/* } */
 .nav-list li {
-  display: inline-block;
+  display: block;
 }
 
+/* Versteckt Archiv & Kalendarium für Gäste */
+.nav-list li.recken-only {
+    display: none !important;
+}
+
+/* Zeigt sie nur an, wenn der Body die Klasse 'logged-in' hat */
+body.logged-in .nav-list li.recken-only {
+    display: block !important;
+}
 
 .nav-list li a {
   background-color: #7a7a7a;
@@ -26,7 +42,7 @@
   border-radius: 4px;
   text-decoration: none;
   font-family: 'Georgia', serif;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 1px;
