fix: resolve tafelrunde UI issues and parchment background path
- Fix relative path for ritter-card parchment background image
- Add scroll event listener to auto-close 'Ordensränge' info dropdown
- Ensure info-content ID is correctly targeted in JavaScript
- Improve mobile UX by preventing sticky info overlays during scrolling

--- a/css/pages/tafelrunde.css
+++ b/css/pages/tafelrunde.css
@@ -22,7 +22,7 @@
 }
 
 .ritter-card {
-    background-image: url('../img/pergament-bg.png');
+    background-image: url('../../img/pergament-bg.png');
     /* background-color: #f4e4bc; */
     /* border: 1px solid #d2b48c; */
     /* box-shadow: 3px 3px 15px rgba(0,0,0,0.2); */
